--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-Мой мини-проект с мини-терминалом и поздравлением у ИИ.
+## Мой мини-проект с мини-терминалом и поздравлением у ИИ.
 
 Чтобы запустить его, получите ключ от OpenRouter, создайте файл config.js и вставьте следующий код:
 
-```JavaScript
+```
+JavaScript
 export const API_CONFIG = {
     OPENROUTER_KEY: 'ваш_ключ_тут'
 };
